; ModuleID = '/home/carl/AnghaBench/linux/net/smc/extr_af_smc.c_smc_hash_sk.c'
source_filename = "/home/carl/AnghaBench/linux/net/smc/extr_af_smc.c_smc_hash_sk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { %struct.smc_hashinfo* }
%struct.smc_hashinfo = type { i32, %struct.hlist_head }
%struct.hlist_head = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @smc_hash_sk(%struct.sock* %0) #0 {
  %2 = alloca %struct.sock*, align 8
  %3 = alloca %struct.smc_hashinfo*, align 8
  %4 = alloca %struct.hlist_head*, align 8
  store %struct.sock* %0, %struct.sock** %2, align 8
  %5 = load %struct.sock*, %struct.sock** %2, align 8
  %6 = getelementptr inbounds %struct.sock, %struct.sock* %5, i32 0, i32 0
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.smc_hashinfo*, %struct.smc_hashinfo** %9, align 8
  store %struct.smc_hashinfo* %10, %struct.smc_hashinfo** %3, align 8
  %11 = load %struct.smc_hashinfo*, %struct.smc_hashinfo** %3, align 8
  %12 = getelementptr inbounds %struct.smc_hashinfo, %struct.smc_hashinfo* %11, i32 0, i32 1
  store %struct.hlist_head* %12, %struct.hlist_head** %4, align 8
  %13 = load %struct.smc_hashinfo*, %struct.smc_hashinfo** %3, align 8
  %14 = getelementptr inbounds %struct.smc_hashinfo, %struct.smc_hashinfo* %13, i32 0, i32 0
  %15 = call i32 @write_lock_bh(i32* %14)
  %16 = load %struct.sock*, %struct.sock** %2, align 8
  %17 = load %struct.hlist_head*, %struct.hlist_head** %4, align 8
  %18 = call i32 @sk_add_node(%struct.sock* %16, %struct.hlist_head* %17)
  %19 = load %struct.sock*, %struct.sock** %2, align 8
  %20 = call i32 @sock_net(%struct.sock* %19)
  %21 = load %struct.sock*, %struct.sock** %2, align 8
  %22 = getelementptr inbounds %struct.sock, %struct.sock* %21, i32 0, i32 0
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %22, align 8
  %24 = call i32 @sock_prot_inuse_add(i32 %20, %struct.TYPE_4__* %23, i32 1)
  %25 = load %struct.smc_hashinfo*, %struct.smc_hashinfo** %3, align 8
  %26 = getelementptr inbounds %struct.smc_hashinfo, %struct.smc_hashinfo* %25, i32 0, i32 0
  %27 = call i32 @write_unlock_bh(i32* %26)
  ret i32 0
}

declare dso_local i32 @write_lock_bh(i32*) #1

declare dso_local i32 @sk_add_node(%struct.sock*, %struct.hlist_head*) #1

declare dso_local i32 @sock_prot_inuse_add(i32, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @sock_net(%struct.sock*) #1

declare dso_local i32 @write_unlock_bh(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
